--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.33.1",
     "chalk": "^4.1.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "openai": "^4.28.0",
+    "redis": "^4.7.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
