--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
     "openai": "^4.28.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
