--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "prepare": "npm run build",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "generate": "ts-node src/tools/internal/generateSwarm.ts"
   },
   "keywords": [
     "ai",
@@ -32,14 +33,18 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "ngrok": "5.0.0-beta.2",
     "openai": "^4.28.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "twilio": "^5.4.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.17.14",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "cross-env": "^7.0.3",
