--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngrok": "5.0.0-beta.2",
     "node-fetch": "2",
     "openai": "^4.28.0",
+    "sox-stream": "^2.0.6",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "twilio": "^5.4.3",
