--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "prepare": "npm run build",
     "watch": "tsc -w",
-    "generate": "ts-node src/tools/internal/generateSwarm.ts"
+    "generate": "ts-node src/tools/internal/generateSwarm.ts",
+    "voice": "ts-node examples/voice-llm/server.ts"
   },
   "keywords": [
     "ai",
@@ -32,9 +33,12 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^7.15.0",
+    "audio-resampler": "^1.0.1",
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "ngrok": "5.0.0-beta.2",
     "node-fetch": "2",
     "openai": "^4.28.0",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/google-cloud__storage": "^2.3.1",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.17.14",
